--- a/Capstone2/app/src/main/res/layout/activity_create_account.xml
+++ b/Capstone2/app/src/main/res/layout/activity_create_account.xml
@@ -4,36 +4,41 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F5F2DE"
+    android:background="@android:drawable/alert_light_frame"
     tools:context=".create_account">
 
     <EditText
         android:id="@+id/editText9"
-        android:layout_width="407dp"
-        android:layout_height="73dp"
-        android:background="#FCE72E"
+        android:layout_width="399dp"
+        android:layout_height="67dp"
+        android:background="#F8F0AC"
+        android:bufferType="spannable"
+        android:cursorVisible="true"
         android:ems="10"
-        android:fontFamily="sans-serif-medium"
+        android:fontFamily="@font/courgette"
         android:inputType="textPersonName"
-        android:text="  IMMUNIZATIONTARIO"
-        android:textColor="@android:color/holo_red_dark"
+        android:text="   ImmunizatiOntario"
+        android:textColor="#0F5049"
         android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/txtLoginEmail"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.148" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btnPersonal"
-        android:layout_width="404dp"
-        android:layout_height="113dp"
+        android:layout_width="0dp"
+        android:layout_height="110sp"
         android:layout_marginTop="36dp"
-        android:background="#158B18"
+        android:background="@android:drawable/btn_default"
+        android:fontFamily="cursive"
         android:text="Personal Account"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textColor="#FFFFFF"
+        android:textColor="#056960"
+        android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.466"
@@ -42,13 +47,15 @@
 
     <Button
         android:id="@+id/btnDoctor"
-        android:layout_width="411dp"
-        android:layout_height="129dp"
+        android:layout_width="0dp"
+        android:layout_height="110sp"
         android:layout_marginTop="36dp"
-        android:background="#9C24B1"
-        android:text="Are you a Doctor?"
+        android:background="@android:drawable/btn_default"
+        android:fontFamily="cursive"
+        android:text="Doctor Account"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textColor="#FFFFFF"
+        android:textColor="#7C0D8F"
+        android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,13 +63,15 @@
 
     <Button
         android:id="@+id/btnSchool"
-        android:layout_width="420dp"
-        android:layout_height="130dp"
+        android:layout_width="0dp"
+        android:layout_height="110sp"
         android:layout_marginTop="36dp"
-        android:background="#3345AF"
-        android:text="School Admin ???"
+        android:background="@android:drawable/btn_default"
+        android:fontFamily="cursive"
+        android:text="School Account"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textColor="#FFFFFF"
+        android:textColor="#3F51B5"
+        android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -71,31 +80,32 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="388dp"
+        android:layout_width="0dp"
         android:layout_height="63dp"
+        android:layout_marginTop="8dp"
         android:background="#F8F7F3"
+        android:fontFamily="@font/amarante"
         android:text="     NEW USER ACCOUNT"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textColor="#3F51B5"
+        android:textColor="@android:color/widget_edittext_dark"
         android:textSize="30sp"
         android:textStyle="normal|bold"
-        app:layout_constraintBottom_toTopOf="@+id/btnPersonal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintHorizontal_bias="0.478"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText9" />
 
     <Button
         android:id="@+id/btnCancel"
-        android:layout_width="226dp"
-        android:layout_height="69dp"
+        android:layout_width="308dp"
+        android:layout_height="103dp"
         android:layout_marginStart="104dp"
         android:layout_marginLeft="104dp"
         android:layout_marginTop="61dp"
         android:layout_marginEnd="105dp"
         android:layout_marginRight="105dp"
         android:layout_marginBottom="58dp"
-        android:background="#E91E63"
+        android:background="@android:drawable/btn_star_big_off"
         android:text="Cancel"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textStyle="bold"
