--- a/Capstone2/app/src/main/res/layout/activity_home_doctor.xml
+++ b/Capstone2/app/src/main/res/layout/activity_home_doctor.xml
@@ -4,100 +4,107 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F1ECFA"
+    android:background="@android:drawable/alert_light_frame"
     tools:context=".home_doctor">
 
-    <Button
-        android:id="@+id/btnDocLogout"
-        android:layout_width="80dp"
-        android:layout_height="72dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginLeft="2dp"
-        android:background="#9C27B0"
-        android:text="Logout"
-        android:textColor="#FAF6F6"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button39"
-        app:layout_constraintTop_toBottomOf="@+id/editText15" />
-
-    <Button
-        android:id="@+id/btnDocProfile"
-        android:layout_width="85dp"
-        android:layout_height="72dp"
-        android:background="#9C27B0"
-        android:text="Profile"
-        android:textColor="#FAF6F6"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/button38"
-        app:layout_constraintStart_toEndOf="@+id/btnDocHome"
-        app:layout_constraintTop_toBottomOf="@+id/editText15" />
-
-    <Button
-        android:id="@+id/btnDocUpdate"
-        android:layout_width="85dp"
-        android:layout_height="72dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginRight="4dp"
-        android:background="#9C27B0"
-        android:text="Update"
-        android:textColor="#FAF6F6"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/button39"
-        app:layout_constraintStart_toEndOf="@+id/btnDocProfile"
-        app:layout_constraintTop_toBottomOf="@+id/editText15" />
-
-    <Button
-        android:id="@+id/btnDocView"
-        android:layout_width="80dp"
-        android:layout_height="72dp"
-        android:background="#9C27B0"
-        android:text="View"
-        android:textColor="#FAF6F6"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/button40"
-        app:layout_constraintStart_toEndOf="@+id/btnDocUpdate"
-        app:layout_constraintTop_toBottomOf="@+id/editText15" />
-
-    <Button
-        android:id="@+id/btnDocHome"
-        android:layout_width="81dp"
-        android:layout_height="72dp"
-        android:layout_marginEnd="2dp"
-        android:layout_marginRight="2dp"
-        android:background="#9C27B0"
-        android:text="Home"
-        android:textColor="#FAF6F6"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/button37"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText15" />
-
     <EditText
-        android:id="@+id/editText15"
-        android:layout_width="416dp"
-        android:layout_height="73dp"
-        android:background="#F1E786"
+        android:id="@+id/editText34"
+        android:layout_width="406dp"
+        android:layout_height="62dp"
+        android:layout_marginBottom="32dp"
+        android:background="#F8F3C4"
         android:ems="10"
-        android:fontFamily="sans-serif-medium"
+        android:fontFamily="@font/courgette"
         android:inputType="textPersonName"
-        android:text="  IMMUNIZATIONTARIO"
-        android:textColor="@android:color/holo_red_dark"
+        android:text="   ImmunizatiOntario"
+        android:textColor="#7C0D8F"
         android:textSize="36sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
+        android:id="@+id/btnDocLogout"
+        android:layout_width="69dp"
+        android:layout_height="71dp"
+        android:layout_marginTop="7dp"
+        android:background="@android:drawable/alert_light_frame"
+        android:fontFamily="@font/allan"
+        android:text="Logout"
+        android:textColor="#9C27B0"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button39"
+        app:layout_constraintTop_toBottomOf="@+id/editText34" />
+
+    <Button
+        android:id="@+id/btnDocProfile"
+        android:layout_width="76dp"
+        android:layout_height="69dp"
+        android:layout_marginTop="7dp"
+        android:background="@android:drawable/alert_light_frame"
+        android:fontFamily="@font/allan"
+        android:text="Profile"
+        android:textColor="#9C27B0"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/button38"
+        app:layout_constraintStart_toEndOf="@+id/btnDocHome"
+        app:layout_constraintTop_toBottomOf="@+id/editText34" />
+
+    <Button
+        android:id="@+id/btnDocUpdate"
+        android:layout_width="87dp"
+        android:layout_height="69dp"
+        android:layout_marginTop="7dp"
+        android:background="@android:drawable/alert_light_frame"
+        android:fontFamily="@font/allan"
+        android:text="Update"
+        android:textColor="#9C27B0"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/button39"
+        app:layout_constraintStart_toEndOf="@+id/btnDocProfile"
+        app:layout_constraintTop_toBottomOf="@+id/editText34" />
+
+    <Button
+        android:id="@+id/btnDocView"
+        android:layout_width="73dp"
+        android:layout_height="69dp"
+        android:layout_marginTop="7dp"
+        android:background="@android:drawable/alert_light_frame"
+        android:fontFamily="@font/allan"
+        android:text="View"
+        android:textColor="#9C27B0"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/button40"
+        app:layout_constraintStart_toEndOf="@+id/btnDocUpdate"
+        app:layout_constraintTop_toBottomOf="@+id/editText34" />
+
+    <Button
+        android:id="@+id/btnDocHome"
+        android:layout_width="72dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="7dp"
+        android:background="@android:drawable/alert_light_frame"
+        android:fontFamily="@font/allan"
+        android:text="Home"
+        android:textColor="#9C27B0"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/button37"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText34" />
+
+    <Button
         android:id="@+id/btnDHomeInfo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="42dp"
-        android:background="#A243B3"
+        android:background="@android:drawable/alert_light_frame"
+        android:fontFamily="sans-serif-medium"
         android:text="Vaccines' Information"
-        android:textColor="#F7F3F3"
+        android:textColor="#790B8B"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -109,9 +116,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="42dp"
-        android:background="#A243B3"
+        android:background="@android:drawable/alert_light_frame"
+        android:fontFamily="sans-serif-medium"
         android:text="Add New Patient"
-        android:textColor="#F7F3F3"
+        android:textColor="#790B8B"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/btnDHomeViewPatients"
@@ -123,9 +131,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="42dp"
-        android:background="#A243B3"
+        android:background="@android:drawable/alert_light_frame"
+        android:fontFamily="sans-serif-medium"
         android:text="View Patients"
-        android:textColor="#F7F3F3"
+        android:textColor="#790B8B"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/btnDHomeInfo"
