--- a/Capstone2/app/src/main/res/layout/activity_password_reminder.xml
+++ b/Capstone2/app/src/main/res/layout/activity_password_reminder.xml
@@ -4,39 +4,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FCCC41"
+    android:background="@android:drawable/dialog_holo_light_frame"
     tools:context=".PasswordReminder">
 
     <EditText
         android:id="@+id/editText16"
-        android:layout_width="407dp"
-        android:layout_height="73dp"
-        android:layout_marginTop="28dp"
-        android:background="#E6F8D1"
+        android:layout_width="428dp"
+        android:layout_height="72dp"
+        android:layout_marginBottom="32dp"
+        android:background="#F8F3C4"
         android:ems="10"
-        android:fontFamily="sans-serif-medium"
+        android:fontFamily="@font/courgette"
         android:inputType="textPersonName"
-        android:text="  IMMUNIZATIONTARIO"
-        android:textColor="@android:color/holo_red_dark"
+        android:text="   ImmunizatiOntario"
+        android:textColor="#0F5049"
         android:textSize="36sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/txtLoginEmail"
+        app:layout_constraintBottom_toTopOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.529"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.148" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="0dp"
-        android:layout_height="71dp"
-        android:layout_marginTop="24dp"
-        android:text="  Forgot Your Password?"
+        android:layout_width="393dp"
+        android:layout_height="51dp"
+        android:background="@color/cardview_shadow_start_color"
+        android:fontFamily="@font/aladin"
+        android:text="         Forgot Your Password?"
         android:textColor="#2B2A2A"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText16" />
 
@@ -45,7 +45,8 @@
         android:layout_width="380dp"
         android:layout_height="69dp"
         android:layout_marginTop="9dp"
-        android:text="Don't worry!! Resetting your password is easy !!!"
+        android:background="@android:drawable/ic_dialog_alert"
+        android:text="                           Don't worry!! \n         Resetting your password is easy !!!"
         android:textColor="#AD0505"
         android:textSize="20sp"
         android:textStyle="italic"
@@ -57,11 +58,12 @@
         android:id="@+id/txtEmail"
         android:layout_width="396dp"
         android:layout_height="80dp"
-        android:background="#FCE2E2"
+        android:background="@android:drawable/editbox_dropdown_light_frame"
         android:ems="10"
         android:hint="   Enter Your Email Here !!"
         android:inputType="textEmailAddress"
         android:textColor="#141313"
+        android:textColorHint="#C5B098"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -75,12 +77,13 @@
         android:layout_height="56dp"
         android:layout_marginStart="30dp"
         android:layout_marginLeft="30dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="30dp"
         android:layout_marginRight="30dp"
-        android:background="@android:color/holo_red_dark"
+        android:background="@android:drawable/btn_default"
+        android:fontFamily="@font/aclonica"
         android:text="Send"
-        android:textColor="#FCF9F9"
+        android:textColor="@android:color/widget_edittext_dark"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -104,11 +107,12 @@
         android:id="@+id/btnReminderBack"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="21dp"
+        android:layout_marginTop="16dp"
         android:layout_marginBottom="14dp"
-        android:background="@android:color/holo_red_dark"
+        android:background="@android:drawable/btn_default"
+        android:fontFamily="@font/aclonica"
         android:text="Back to Login"
-        android:textColor="#F8F6F6"
+        android:textColor="@android:color/widget_edittext_dark"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button23"
