--- a/Capstone2/app/src/main/res/layout/activity_profile_school.xml
+++ b/Capstone2/app/src/main/res/layout/activity_profile_school.xml
@@ -4,22 +4,41 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E6F5F7"
+    android:background="@android:drawable/alert_light_frame"
     tools:context=".SchoolProfileActivity">
 
     <EditText
-        android:id="@+id/txtSProfileTitle"
-        android:layout_width="414dp"
-        android:layout_height="57dp"
-        android:background="#03178B"
+        android:id="@+id/editText2"
+        android:layout_width="409dp"
+        android:layout_height="73dp"
+        android:layout_marginBottom="32dp"
+        android:background="#F8F3C4"
         android:ems="10"
+        android:fontFamily="@font/courgette"
+        android:inputType="textPersonName"
+        android:text="   ImmunizatiOntario"
+        android:textColor="#3F51B5"
+        android:textSize="36sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/textView6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/txtSProfileTitle"
+        android:layout_width="372dp"
+        android:layout_height="51dp"
+        android:layout_marginTop="8dp"
+        android:background="?attr/panelBackground"
+        android:ems="10"
+        android:fontFamily="casual"
         android:inputType="textPersonName"
         android:text="   My Profile"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textColor="#FFFFFF"
+        android:textColor="#0F1E70"
         android:textSize="25sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/btnSProfileUpload"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText2" />
@@ -32,9 +51,11 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="25dp"
-        android:layout_marginBottom="48dp"
-        android:background="#3F51B5"
+        android:layout_marginBottom="35dp"
+        android:background="@android:drawable/btn_default"
+        android:fontFamily="serif"
         android:text="Back to Home"
+        android:textColor="#081557"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -44,29 +65,12 @@
         app:layout_constraintTop_toBottomOf="@+id/editText8"
         app:layout_constraintVertical_bias="0.0" />
 
-    <EditText
-        android:id="@+id/editText2"
-        android:layout_width="416dp"
-        android:layout_height="73dp"
-        android:background="#F1E786"
-        android:ems="10"
-        android:fontFamily="sans-serif-medium"
-        android:inputType="textPersonName"
-        android:text="  IMMUNIZATIONTARIO"
-        android:textColor="@android:color/holo_red_dark"
-        android:textSize="36sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
 
     <TextView
         android:id="@+id/txtSProfileName"
         android:layout_width="212dp"
         android:layout_height="41dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
         android:hint="First - Last Name"
@@ -80,7 +84,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="15dp"
-        android:background="#91C6F1"
+        android:background="#D4E5F1"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Phone: "
@@ -97,7 +101,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="15dp"
-        android:background="#91C6F1"
+        android:background="#D4E5F1"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Address:"
@@ -115,8 +119,8 @@
         android:layout_height="41dp"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="50dp"
-        android:background="#91C6F1"
+        android:layout_marginTop="30dp"
+        android:background="#D4E5F1"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Full Name :"
@@ -143,7 +147,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="15dp"
-        android:background="#91C6F1"
+        android:background="#D4E5F1"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Email: "
@@ -160,7 +164,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="15dp"
-        android:background="#91C6F1"
+        android:background="#D4E5F1"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="School Name: "
@@ -213,7 +217,7 @@
         android:layout_width="260dp"
         android:layout_height="165dp"
         android:layout_marginTop="12dp"
-        android:background="#E99EB8"
+        android:background="@android:drawable/alert_light_frame"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtSProfileTitle" />
 
