--- a/Capstone2/app/src/main/res/layout/activity_add_member_form.xml
+++ b/Capstone2/app/src/main/res/layout/activity_add_member_form.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E8F8E8"
+    android:background="@android:drawable/alert_light_frame"
     tools:context=".AddMemberForm">
 
 
@@ -12,7 +12,8 @@
         android:id="@+id/btnPAddCancel"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="#76A83A"
+        android:background="@android:drawable/btn_default"
+        android:fontFamily="serif"
         android:text="@android:string/cancel"
         android:textSize="25sp"
         android:textStyle="bold"
@@ -29,7 +30,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="20dp"
-        android:background="#C5E0C7"
+        android:background="#D5E7D6"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Date of Birth :"
@@ -40,16 +41,18 @@
 
     <EditText
         android:id="@+id/editText19"
-        android:layout_width="416dp"
-        android:layout_height="73dp"
-        android:background="#F1E786"
+        android:layout_width="414dp"
+        android:layout_height="65dp"
+        android:layout_marginBottom="32dp"
+        android:background="#F8F3C4"
         android:ems="10"
-        android:fontFamily="sans-serif-medium"
+        android:fontFamily="@font/courgette"
         android:inputType="textPersonName"
-        android:text="  IMMUNIZATIONTARIO"
-        android:textColor="@android:color/holo_red_dark"
+        android:text="   ImmunizatiOntario"
+        android:textColor="#056960"
         android:textSize="36sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,6 +63,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:fontFamily="@font/aclonica"
         android:text="Add New Member"
         android:textColor="#131213"
         android:textSize="30sp"
@@ -75,7 +79,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="20dp"
-        android:background="#C5E0C7"
+        android:background="#D5E7D6"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Full Name :"
@@ -91,7 +95,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="20dp"
-        android:background="#C5E0C7"
+        android:background="#D5E7D6"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="OHIP No :"
@@ -105,8 +109,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
-        android:background="#76A83A"
+        android:background="@android:drawable/btn_default"
+        android:fontFamily="serif"
         android:text="ADD"
+        android:textColor="#07550B"
         android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -141,7 +147,7 @@
         android:layout_marginTop="18dp"
         android:ems="10"
         android:hint="dd/mm/yyyy"
-        android:inputType="text"
+        android:inputType="date|text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/editText22"
         app:layout_constraintTop_toBottomOf="@+id/txtPAddName" />
