--- a/Capstone2/app/src/main/res/layout/activity_add_patient_form.xml
+++ b/Capstone2/app/src/main/res/layout/activity_add_patient_form.xml
@@ -4,8 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F1ECFA"
+    android:background="@android:drawable/alert_light_frame"
     tools:context=".AddPatientForm">
+
+    <EditText
+        android:id="@+id/editText29"
+        android:layout_width="409dp"
+        android:layout_height="67dp"
+        android:layout_marginBottom="32dp"
+        android:background="#F8F3C4"
+        android:ems="10"
+        android:fontFamily="@font/courgette"
+        android:inputType="textPersonName"
+        android:text="    ImmunizatiOntario"
+        android:textColor="#7C0D8F"
+        android:textSize="36sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/textView6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/txtAddPatientName"
@@ -45,7 +64,8 @@
         android:id="@+id/btnDAddCancel"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="#EE99B7"
+        android:background="@android:drawable/btn_default"
+        android:fontFamily="serif"
         android:text="@android:string/cancel"
         android:textSize="25sp"
         android:textStyle="bold"
@@ -62,7 +82,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="20dp"
-        android:background="#E6DBFA"
+        android:background="#F2E2F5"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Date of Birth :"
@@ -71,35 +91,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText21" />
 
-    <EditText
-        android:id="@+id/editText19"
-        android:layout_width="416dp"
-        android:layout_height="73dp"
-        android:background="#F1E786"
-        android:ems="10"
-        android:fontFamily="sans-serif-medium"
-        android:inputType="textPersonName"
-        android:text="  IMMUNIZATIONTARIO"
-        android:textColor="@android:color/holo_red_dark"
-        android:textSize="36sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:fontFamily="@font/aclonica"
         android:text="Add New Patient"
         android:textColor="#131213"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText19" />
+        app:layout_constraintTop_toBottomOf="@+id/editText29" />
 
     <EditText
         android:id="@+id/editText21"
@@ -108,7 +112,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="20dp"
-        android:background="#E6DBFA"
+        android:background="#F2E2F5"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Full Name :"
@@ -124,7 +128,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="20dp"
-        android:background="#E6DBFA"
+        android:background="#F2E2F5"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="OHIP No :"
@@ -138,8 +142,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
-        android:background="#EE99B7"
+        android:background="@android:drawable/btn_default"
+        android:fontFamily="serif"
         android:text="ADD"
+        android:textColor="#7C0D8F"
         android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
