--- a/Capstone2/app/src/main/res/layout/activity_add_vaccine.xml
+++ b/Capstone2/app/src/main/res/layout/activity_add_vaccine.xml
@@ -4,7 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:drawable/alert_light_frame"
     tools:context=".AddVaccineActivity">
+
+    <EditText
+        android:id="@+id/editText31"
+        android:layout_width="399dp"
+        android:layout_height="70dp"
+        android:layout_marginBottom="32dp"
+        android:background="#F8F3C4"
+        android:ems="10"
+        android:fontFamily="@font/courgette"
+        android:inputType="textPersonName"
+        android:text="   ImmunizatiOntario"
+        android:textColor="#7C0D8F"
+        android:textSize="36sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/textView6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editText24"
@@ -13,7 +33,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="22dp"
-        android:background="#C5E0C7"
+        android:background="#F2E2F5"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Date Given:"
@@ -52,7 +72,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="20dp"
-        android:background="#C5E0C7"
+        android:background="#F2E2F5"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Vaccine Name:"
@@ -67,7 +87,7 @@
         android:layout_height="145dp"
         android:layout_marginTop="32dp"
         android:layout_marginBottom="32dp"
-        android:background="@drawable/add_per"
+        android:background="@drawable/update_vaccine"
         app:layout_constraintBottom_toTopOf="@+id/btnVAddCancel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -90,8 +110,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:layout_marginBottom="32dp"
-        android:background="#76A83A"
+        android:background="@android:drawable/btn_default"
+        android:fontFamily="serif"
         android:text="ADD VACCINATION"
+        android:textColor="#54115F"
         android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button"
@@ -103,7 +125,8 @@
         android:id="@+id/btnVAddCancel"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="#76A83A"
+        android:background="@android:drawable/btn_default"
+        android:fontFamily="serif"
         android:text="@android:string/cancel"
         android:textSize="25sp"
         android:textStyle="bold"
@@ -120,7 +143,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="20dp"
-        android:background="#C5E0C7"
+        android:background="#F2E2F5"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="OHIP Number:"
@@ -129,28 +152,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText24" />
 
-    <EditText
-        android:id="@+id/editText19"
-        android:layout_width="416dp"
-        android:layout_height="73dp"
-        android:background="#F1E786"
-        android:ems="10"
-        android:fontFamily="sans-serif-medium"
-        android:inputType="textPersonName"
-        android:text="  IMMUNIZATIONTARIO"
-        android:textColor="@android:color/holo_red_dark"
-        android:textSize="36sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:fontFamily="@font/amarante"
         android:text="Update Patient's Record"
         android:textColor="#131212"
         android:textSize="25sp"
@@ -158,6 +165,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.45"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText19" />
+        app:layout_constraintTop_toBottomOf="@+id/editText31" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
