--- a/Capstone2/app/src/main/res/layout/activity_calender.xml
+++ b/Capstone2/app/src/main/res/layout/activity_calender.xml
@@ -4,61 +4,90 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:drawable/alert_light_frame"
     tools:context=".CalendarActivity">
 
-    <Button
-        android:id="@+id/btnCalendarHome"
-        android:layout_width="200dp"
-        android:layout_height="39dp"
-        android:background="#27B32C"
-        android:text="Home"
-        android:textColor="#FAF7F7"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnCalendarViewRecord"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/btnCalendarViewRecord"
-        android:layout_width="285dp"
-        android:layout_height="39dp"
-        android:background="#27B32C"
-        android:text="View Immunization Record"
-        android:textColor="#FAF7F7"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/btnCalendarHome"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/calendarView" />
-
     <EditText
-        android:id="@+id/editText15"
-        android:layout_width="416dp"
-        android:layout_height="73dp"
-        android:background="#F1E786"
+        android:id="@+id/editText17"
+        android:layout_width="404dp"
+        android:layout_height="70dp"
+        android:layout_marginBottom="32dp"
+        android:background="#F8F3C4"
         android:ems="10"
-        android:fontFamily="sans-serif-medium"
+        android:fontFamily="@font/courgette"
         android:inputType="textPersonName"
-        android:text="  IMMUNIZATIONTARIO"
-        android:textColor="@android:color/holo_red_dark"
+        android:text="   ImmunizatiOntario"
+        android:textColor="#056960"
         android:textSize="36sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/btnCalendarHome"
+        android:layout_width="207dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="75dp"
+        android:layout_marginEnd="100dp"
+        android:layout_marginRight="100dp"
+        android:layout_marginBottom="70dp"
+        android:background="@android:drawable/btn_default"
+        android:fontFamily="serif"
+        android:text="Home"
+        android:textColor="#124412"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnCalendarViewRecord" />
+
+
+    <Button
+        android:id="@+id/btnCalendarViewRecord"
+        android:layout_width="312dp"
+        android:layout_height="54dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginRight="50dp"
+        android:background="@android:drawable/btn_default"
+        android:fontFamily="serif"
+        android:text="View Immunization Record"
+        android:textColor="#124412"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/calendarView" />
 
     <CalendarView
         android:id="@+id/calendarView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnSHomeRecords"
+        android:layout_width="406dp"
+        android:layout_height="319dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnCalendarViewRecord"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText15" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="50dp"
+        android:fontFamily="@font/amarante"
+        android:text="Upcoming Vaccination Date"
+        android:textColor="#131213"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/calendarView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText17" />
 </androidx.constraintlayout.widget.ConstraintLayout>
