--- a/Capstone2/app/src/main/res/layout/activity_create_doctor.xml
+++ b/Capstone2/app/src/main/res/layout/activity_create_doctor.xml
@@ -4,8 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F1ECFA"
+    android:background="@android:drawable/alert_light_frame"
     tools:context=".create_doctor">
+
+    <EditText
+        android:id="@+id/editText32"
+        android:layout_width="408dp"
+        android:layout_height="70dp"
+        android:layout_marginBottom="32dp"
+        android:background="#F8F3C4"
+        android:ems="10"
+        android:fontFamily="@font/courgette"
+        android:inputType="textPersonName"
+        android:text="   ImmunizatiOntario"
+        android:textColor="#7C0D8F"
+        android:textSize="36sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/textView6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/txtDoctorPassword"
@@ -81,44 +100,34 @@
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="407dp"
         android:layout_height="0dp"
+        android:layout_marginTop="12dp"
         android:layout_marginBottom="16dp"
+        android:background="@android:drawable/btn_default"
         android:text="Create Account"
+        android:textColor="#7C0D8F"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/btnDocCancel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtDoctorPassword" />
 
     <Button
         android:id="@+id/btnDocCancel"
-        android:layout_width="409dp"
-        android:layout_height="52dp"
-        android:layout_marginBottom="84dp"
+        android:layout_width="389dp"
+        android:layout_height="49dp"
+        android:layout_marginTop="16dp"
+        android:background="@android:drawable/btn_default"
+        android:fontFamily="serif"
         android:text="Cancel"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <EditText
-        android:id="@+id/editText2"
-        android:layout_width="416dp"
-        android:layout_height="73dp"
-        android:background="#F1E786"
-        android:ems="10"
-        android:fontFamily="sans-serif-medium"
-        android:inputType="textPersonName"
-        android:text="  IMMUNIZATIONTARIO"
-        android:textColor="@android:color/holo_red_dark"
-        android:textSize="36sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/btnCreateDoctorAcc" />
 
     <EditText
         android:id="@+id/editText3"
@@ -127,7 +136,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="20dp"
-        android:background="#E6DBFA"
+        android:background="#F2E2F5"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Full Name:"
@@ -139,18 +148,18 @@
 
     <EditText
         android:id="@+id/editText11"
-        android:layout_width="0dp"
-        android:layout_height="62dp"
-        android:background="#79048D"
+        android:layout_width="280dp"
+        android:layout_height="94dp"
         android:ems="10"
+        android:fontFamily="@font/aclonica"
         android:inputType="textPersonName"
-        android:text="             DOCTOR USER"
-        android:textColor="#FAF8F8"
+        android:text=" DOCTOR USER"
+        android:textColor="#131213"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText2" />
+        app:layout_constraintTop_toBottomOf="@+id/editText32" />
 
     <EditText
         android:id="@+id/editText14"
@@ -159,7 +168,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="25dp"
-        android:background="#E6DBFA"
+        android:background="#F2E2F5"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Clinic Address: "
@@ -175,7 +184,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="25dp"
-        android:background="#E6DBFA"
+        android:background="#F2E2F5"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Practition ID:"
@@ -193,7 +202,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="20dp"
-        android:background="#E6DBFA"
+        android:background="#F2E2F5"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Phone: "
@@ -209,7 +218,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="25dp"
-        android:background="#E6DBFA"
+        android:background="#F2E2F5"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Password:"
@@ -225,7 +234,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="25dp"
-        android:background="#E6DBFA"
+        android:background="#F2E2F5"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Email: "
