--- a/Capstone2/app/src/main/res/layout/activity_create_personal.xml
+++ b/Capstone2/app/src/main/res/layout/activity_create_personal.xml
@@ -4,20 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E8F8E8">
+    android:background="@android:drawable/alert_light_frame">
 
     <EditText
-        android:id="@+id/editText2"
-        android:layout_width="416dp"
-        android:layout_height="73dp"
-        android:background="#F1E786"
+        android:id="@+id/editText13"
+        android:layout_width="403dp"
+        android:layout_height="70dp"
+        android:layout_marginBottom="32dp"
+        android:background="#F8F3C4"
         android:ems="10"
-        android:fontFamily="sans-serif-medium"
+        android:fontFamily="@font/courgette"
         android:inputType="textPersonName"
-        android:text="  IMMUNIZATIONTARIO"
-        android:textColor="@android:color/holo_red_dark"
+        android:text="   ImmunizatiOntario"
+        android:textColor="#056960"
         android:textSize="36sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +32,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="20dp"
-        android:background="#C5E0C7"
+        android:background="#D5E7D6"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Full Name :"
@@ -47,7 +49,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="25dp"
-        android:background="#C5E0C7"
+        android:background="#D5E7D6"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="OHIP Card No:"
@@ -66,7 +68,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="20dp"
-        android:background="#C5E0C7"
+        android:background="#D5E7D6"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Email: "
@@ -83,7 +85,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="25dp"
-        android:background="#C5E0C7"
+        android:background="#D5E7D6"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Date of Birth: "
@@ -100,7 +102,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="25dp"
-        android:background="#C5E0C7"
+        android:background="#D5E7D6"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Password: "
@@ -117,7 +119,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="25dp"
-        android:background="#C5E0C7"
+        android:background="#D5E7D6"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Phone: "
@@ -129,20 +131,21 @@
 
     <EditText
         android:id="@+id/editText11"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:background="#096B0B"
+        android:layout_width="294dp"
+        android:layout_height="57dp"
+        android:layout_marginTop="4dp"
         android:ems="10"
+        android:fontFamily="@font/aclonica"
         android:inputType="textPersonName"
-        android:text="          PERSONAL USER"
+        android:text="PERSONAL USER"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textColor="#FFFFFF"
+        android:textColor="#131213"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.405"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText2" />
+        app:layout_constraintTop_toBottomOf="@+id/editText13" />
 
     <Button
         android:id="@+id/btnCreatePersonal"
@@ -150,7 +153,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:layout_marginBottom="32dp"
+        android:background="@android:drawable/btn_default"
+        android:fontFamily="serif"
         android:text="Create Account"
+        android:textColor="#07550B"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/btnCancel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -161,7 +169,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
+        android:background="@android:drawable/btn_default"
+        android:fontFamily="serif"
         android:text="@android:string/cancel"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
