--- a/Capstone2/app/src/main/res/layout/activity_create_school.xml
+++ b/Capstone2/app/src/main/res/layout/activity_create_school.xml
@@ -4,9 +4,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E6F5F7"
+    android:background="@android:drawable/alert_light_frame"
     tools:context=".create_school">
 
+
+        <EditText
+            android:id="@+id/editText33"
+            android:layout_width="403dp"
+            android:layout_height="70dp"
+            android:layout_marginBottom="32dp"
+            android:background="#F8F3C4"
+            android:ems="10"
+            android:fontFamily="@font/courgette"
+            android:inputType="textPersonName"
+            android:text="   ImmunizatiOntario"
+            android:textColor="#056960"
+            android:textSize="36sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/textView6"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/txtSchoolAddress"
@@ -81,7 +100,8 @@
             android:layout_width="411dp"
             android:layout_height="51dp"
             android:layout_marginBottom="32dp"
-            android:background="#00BCD4"
+            android:background="@android:drawable/btn_default"
+            android:fontFamily="serif"
             android:text="Cancel"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -94,11 +114,13 @@
         <Button
             android:id="@+id/btnCreateSchool"
             style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="407dp"
-            android:layout_height="0dp"
+            android:layout_width="383dp"
+            android:layout_height="51dp"
             android:layout_marginTop="24dp"
-            android:background="#E46791"
+            android:background="@android:drawable/btn_default"
+            android:fontFamily="serif"
             android:text="Create Account"
+            android:textColor="#064272"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -107,30 +129,13 @@
             app:layout_constraintTop_toBottomOf="@+id/editText18" />
 
         <EditText
-            android:id="@+id/editText2"
-            android:layout_width="416dp"
-            android:layout_height="73dp"
-            android:background="#E6F8D1"
-            android:ems="10"
-            android:fontFamily="sans-serif-medium"
-            android:inputType="textPersonName"
-            android:text="  IMMUNIZATIONTARIO"
-            android:textColor="@android:color/holo_red_dark"
-            android:textSize="36sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <EditText
             android:id="@+id/editText3"
             android:layout_width="137dp"
             android:layout_height="41dp"
             android:layout_marginStart="24dp"
             android:layout_marginLeft="24dp"
             android:layout_marginTop="20dp"
-            android:background="#91C6F1"
+            android:background="#D4E5F1"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="Full Name"
@@ -147,7 +152,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginLeft="24dp"
             android:layout_marginTop="24dp"
-            android:background="#91C6F1"
+            android:background="#D4E5F1"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="Email: "
@@ -165,7 +170,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginLeft="24dp"
             android:layout_marginTop="24dp"
-            android:background="#91C6F1"
+            android:background="#D4E5F1"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="Password:"
@@ -182,7 +187,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginLeft="24dp"
             android:layout_marginTop="24dp"
-            android:background="#91C6F1"
+            android:background="#D4E5F1"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="School Phone: "
@@ -194,18 +199,19 @@
 
         <EditText
             android:id="@+id/editText11"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:background="#03178B"
+            android:layout_width="291dp"
+            android:layout_height="57dp"
+            android:layout_marginTop="8dp"
             android:ems="10"
+            android:fontFamily="@font/aclonica"
             android:inputType="textPersonName"
-            android:text="            SCHOOL ADMIN"
-            android:textColor="#FCF8F8"
+            android:text="SCHOOL ADMIN"
+            android:textColor="#131213"
             android:textSize="30sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText2" />
+            app:layout_constraintTop_toBottomOf="@+id/editText33" />
 
         <EditText
             android:id="@+id/editText10"
@@ -214,7 +220,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginLeft="24dp"
             android:layout_marginTop="24dp"
-            android:background="#91C6F1"
+            android:background="#D4E5F1"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="School Name: "
@@ -231,7 +237,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginLeft="24dp"
             android:layout_marginTop="24dp"
-            android:background="#91C6F1"
+            android:background="#D4E5F1"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="School Address"
