--- a/Capstone2/app/src/main/res/layout/activity_home_school.xml
+++ b/Capstone2/app/src/main/res/layout/activity_home_school.xml
@@ -4,18 +4,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E6F5F7"
+    android:background="@android:drawable/alert_light_frame"
     tools:context=".home_school">
+
+    <EditText
+        android:id="@+id/editText15"
+        android:layout_width="404dp"
+        android:layout_height="65dp"
+        android:layout_marginBottom="32dp"
+        android:background="#F8F3C4"
+        android:ems="10"
+        android:fontFamily="@font/courgette"
+        android:inputType="textPersonName"
+        android:text="   ImmunizatiOntario"
+        android:textColor="#056960"
+        android:textSize="36sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/textView6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnSHome"
         android:layout_width="100dp"
         android:layout_height="68dp"
-        android:background="#03178B"
+        android:layout_marginTop="7dp"
+        android:background="@android:drawable/alert_light_frame"
+        android:fontFamily="@font/allan"
         android:text="Home"
-        android:textColor="#FAF6F6"
+        android:textColor="#0C1C70"
         android:textSize="18sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/btnSHomeProfile"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText15" />
 
@@ -25,9 +47,11 @@
         android:layout_height="68dp"
         android:layout_marginStart="2dp"
         android:layout_marginLeft="2dp"
-        android:background="#03178B"
+        android:layout_marginTop="7dp"
+        android:background="@android:drawable/alert_light_frame"
+        android:fontFamily="@font/allan"
         android:text="View"
-        android:textColor="#FAF6F6"
+        android:textColor="#0C1C70"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/btnSHomeLogout"
@@ -38,9 +62,11 @@
         android:id="@+id/btnSHomeProfile"
         android:layout_width="100dp"
         android:layout_height="68dp"
-        android:background="#03178B"
+        android:layout_marginTop="7dp"
+        android:background="@android:drawable/alert_light_frame"
+        android:fontFamily="@font/allan"
         android:text="Profile"
-        android:textColor="#FAF6F6"
+        android:textColor="#0C1C70"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/btnSHomeRecords"
@@ -53,9 +79,11 @@
         android:layout_height="68dp"
         android:layout_marginStart="2dp"
         android:layout_marginLeft="2dp"
-        android:background="#03178B"
+        android:layout_marginTop="7dp"
+        android:background="@android:drawable/alert_light_frame"
+        android:fontFamily="@font/allan"
         android:text="Logout"
-        android:textColor="#FAF6F6"
+        android:textColor="#0C1C70"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,9 +95,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="42dp"
-        android:background="#6275DD"
+        android:background="@android:drawable/alert_light_frame"
         android:text="Add New Student"
-        android:textColor="#F7F4F4"
+        android:textColor="#0E1E6F"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/btnSHomeViewStudents"
@@ -81,9 +109,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="42dp"
-        android:background="#6275DD"
+        android:background="@android:drawable/alert_light_frame"
         android:text="My Student's Record"
-        android:textColor="#F7F4F4"
+        android:textColor="#0E1E6F"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/btnSHomeInfo"
@@ -96,31 +124,14 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="42dp"
-        android:background="#6275DD"
+        android:background="@android:drawable/alert_light_frame"
         android:text="Vaccines' Information"
-        android:textColor="#F7F4F4"
+        android:textColor="#0E1E6F"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <EditText
-        android:id="@+id/editText15"
-        android:layout_width="416dp"
-        android:layout_height="73dp"
-        android:background="#F1E786"
-        android:ems="10"
-        android:fontFamily="sans-serif-medium"
-        android:inputType="textPersonName"
-        android:text="  IMMUNIZATIONTARIO"
-        android:textColor="@android:color/holo_red_dark"
-        android:textSize="36sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 
     <Button
