--- a/Capstone2/app/src/main/res/layout/activity_login.xml
+++ b/Capstone2/app/src/main/res/layout/activity_login.xml
@@ -4,15 +4,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FCCC41">
+    android:background="#F8EDA2">
+
+    <EditText
+        android:id="@+id/editText36"
+        android:layout_width="433dp"
+        android:layout_height="69dp"
+        android:background="#F7D165"
+        android:ems="10"
+        android:fontFamily="@font/courgette"
+        android:inputType="textPersonName"
+        android:text="    ImmunizatiOntario"
+        android:textColor="#0F5049"
+        android:textSize="36sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/txtLoginEmail"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btnForgotPassword"
         android:layout_width="231dp"
         android:layout_height="53dp"
-        android:background="@color/colorPrimaryDark"
+        android:background="@android:color/darker_gray"
+        android:fontFamily="@font/aclonica"
         android:text="Forgot Password?"
-        android:textColor="@android:color/white"
+        android:textColor="#790D05"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/btn_create_account"
@@ -20,47 +39,30 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
 
-    <EditText
-        android:id="@+id/txtLoginTitle"
-        android:layout_width="407dp"
-        android:layout_height="73dp"
-        android:background="#E6F8D1"
-        android:ems="10"
-        android:fontFamily="sans-serif-medium"
-        android:inputType="textPersonName"
-        android:text="  IMMUNIZATIONTARIO"
-        android:textColor="@android:color/holo_red_dark"
-        android:textSize="36sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/txtLoginEmail"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.148" />
-
     <Button
         android:id="@+id/btnLogin"
-        android:layout_width="231dp"
+        android:layout_width="0dp"
         android:layout_height="53dp"
-        android:background="@android:color/holo_red_dark"
+        android:background="@android:drawable/btn_default"
+        android:fontFamily="@font/aclonica"
         android:text="Login"
-        android:textColor="@android:color/white"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="28sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/btnForgotPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txtIncorrect"
-        app:layout_constraintBottom_toTopOf="@+id/btnForgotPassword"
-        tools:layout_editor_absoluteY="451dp" />
+        app:layout_constraintTop_toBottomOf="@id/txtIncorrect" />
 
     <Button
         android:id="@+id/btn_create_account"
-        android:layout_width="309dp"
+        android:layout_width="0dp"
         android:layout_height="55dp"
         android:layout_marginBottom="32dp"
-        android:background="@color/design_default_color_primary"
+        android:background="@android:drawable/btn_default"
+        android:fontFamily="@font/aldrich"
         android:text="Create New Account"
-        android:textColor="@android:color/white"
+        android:textColor="@color/cardview_dark_background"
         android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -71,15 +73,21 @@
         android:id="@+id/txtLoginEmail"
         android:layout_width="347dp"
         android:layout_height="62dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="42dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginBottom="30dp"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
-        android:textColorHint="#5C0F83"
+        android:textColorHint="#081970"
         android:textSize="28sp"
         app:layout_constraintBottom_toTopOf="@+id/txtLoginPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtLoginTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/editText36" />
 
     <EditText
         android:id="@+id/txtLoginPassword"
@@ -88,7 +96,7 @@
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
-        android:textColorHint="#5C0F83"
+        android:textColorHint="#081970"
         android:textSize="28sp"
         app:layout_constraintBottom_toTopOf="@+id/AccountTypeRadioGroup"
         app:layout_constraintEnd_toEndOf="parent"
@@ -113,6 +121,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal"
+        android:scrollbarSize="4dp"
         app:layout_constraintBottom_toTopOf="@+id/txtIncorrect"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -123,19 +132,31 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:checked="true"
-            android:text="Personal" />
+            android:text="Personal"
+            android:textColor="#0A700F"
+            android:textColorLink="#0C5E10"
+            android:textSize="20sp"
+            android:textStyle="bold|italic" />
 
         <RadioButton
             android:id="@+id/AccountTypeDoctor"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:text="Doctor" />
+            android:text="Doctor"
+            android:textColor="#7C0D8F"
+            android:textColorLink="#710883"
+            android:textSize="20sp"
+            android:textStyle="bold|italic" />
 
         <RadioButton
             android:id="@+id/AccountTypeSchool"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:text="School" />
+            android:text="School"
+            android:textColor="#3F51B5"
+            android:textColorLink="#12279C"
+            android:textSize="20sp"
+            android:textStyle="bold|italic" />
 
     </RadioGroup>
 
