--- a/Capstone2/app/src/main/res/layout/activity_splash.xml
+++ b/Capstone2/app/src/main/res/layout/activity_splash.xml
@@ -8,15 +8,15 @@
 
     <EditText
         android:id="@+id/editText"
-        android:layout_width="415dp"
-        android:layout_height="77dp"
+        android:layout_width="421dp"
+        android:layout_height="71dp"
         android:layout_marginTop="48dp"
         android:background="#E6F8D1"
         android:ems="10"
-        android:fontFamily="sans-serif-medium"
+        android:fontFamily="@font/courgette"
         android:inputType="textPersonName"
-        android:text="  IMMUNIZATIONTARIO"
-        android:textColor="@android:color/holo_red_dark"
+        android:text="     ImmunizatiOntario"
+        android:textColor="#0F5049"
         android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
@@ -32,6 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="11dp"
         android:layout_marginLeft="11dp"
+        android:background="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -46,6 +47,7 @@
         android:layout_height="56dp"
         android:layout_marginBottom="44dp"
         android:ems="10"
+        android:fontFamily="@font/courgette"
         android:inputType="textPersonName"
         android:text="  Love them, Protect them, Immunize them"
         android:textColor="#3B039E"
@@ -60,6 +62,7 @@
         android:layout_height="49dp"
         android:layout_marginBottom="40dp"
         android:ems="10"
+        android:fontFamily="@font/actor"
         android:inputType="textPersonName"
         android:text='" Record Your Vaccines "'
         android:textColor="#B80303"
