--- a/Capstone2/app/src/main/res/layout/activity_view_doctor.xml
+++ b/Capstone2/app/src/main/res/layout/activity_view_doctor.xml
@@ -4,16 +4,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:drawable/alert_light_frame"
     tools:context=".View_doctor">
+
+    <EditText
+        android:id="@+id/editText44"
+        android:layout_width="395dp"
+        android:layout_height="59dp"
+        android:layout_marginBottom="32dp"
+        android:background="#F8F3C4"
+        android:ems="10"
+        android:fontFamily="@font/courgette"
+        android:inputType="textPersonName"
+        android:text="   ImmunizatiOntario"
+        android:textColor="#7C0D8F"
+        android:textSize="36sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/textView6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnDViewBack"
-        android:layout_width="175dp"
-        android:layout_height="55dp"
+        android:layout_width="206dp"
+        android:layout_height="51dp"
         android:layout_marginBottom="32dp"
-        android:background="#9C27B0"
+        android:background="@android:drawable/btn_default"
+        android:fontFamily="serif"
         android:text="Back to Home"
-        android:textColor="#FCFAFA"
+        android:textColor="#520F6F"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -23,32 +44,16 @@
         app:layout_constraintTop_toBottomOf="@+id/btnDViewUpdate"
         app:layout_constraintVertical_bias="0.982" />
 
-    <EditText
-        android:id="@+id/editText19"
-        android:layout_width="416dp"
-        android:layout_height="73dp"
-        android:background="#F1E786"
-        android:ems="10"
-        android:fontFamily="sans-serif-medium"
-        android:inputType="textPersonName"
-        android:text="  IMMUNIZATIONTARIO"
-        android:textColor="@android:color/holo_red_dark"
-        android:textSize="36sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <Button
         android:id="@+id/btnDViewUpdate"
-        android:layout_width="175dp"
-        android:layout_height="55dp"
+        android:layout_width="240dp"
+        android:layout_height="51dp"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:background="#9C27B0"
+        android:background="@android:drawable/btn_default"
+        android:fontFamily="serif"
         android:text="Update Record"
-        android:textColor="#FCFAFA"
+        android:textColor="#520F6F"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/btnDViewBack"
@@ -70,7 +75,8 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/courgette"
         android:text="Patient's Immunization Record"
         android:textColor="#131212"
         android:textSize="25sp"
@@ -78,6 +84,6 @@
         app:layout_constraintBottom_toTopOf="@+id/button27"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText19" />
+        app:layout_constraintTop_toBottomOf="@+id/editText44" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
